--- a/payment-project-ang-py/payment-ag/src/app/component/loginpage/loginpage.component.html
+++ b/payment-project-ang-py/payment-ag/src/app/component/loginpage/loginpage.component.html
@@ -5,36 +5,35 @@
   
 
   <h2>Payment Credit Card</h2>
-
-  <form (ngSubmit)="onLogin()" #loginForm="ngForm">
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <!-- Username -->
     <div class="form-group">
       <label for="username">Username</label>
       <input type="text" name="username" id="username" placeholder="Enter Customer Code"
-        [(ngModel)]="loginData.username" required />
+      formControlName="usr" required />
     </div>
 
-    <!-- Password -->
+    <!-- Password --> 
     <div class="form-group">
       <label for="password">Password</label>
       <input type="password" name="password" id="password"placeholder="Enter Password"
-        [(ngModel)]="loginData.password" required />
+      formControlName="pss" required />
     </div>
 
     <a routerLink="/forgot-password" class="link for-pass">Forgot password?</a>
+  </form>
 
     <div class="row">
       <div class="column">
-        <button class="login-button" type="submit" [disabled]="!loginForm.valid">
+        <button class="login-button"type="button" (click)="login()">
           Log In
         </button>
       </div>
       <div class="column">
         <button class="regis-button" type="button"
-          (click)="navigateToRegister()">
+          (click)="register()">
           Register
         </button>
       </div>
     </div>
-  </form>
 </div>
