--- a/payment-project-ang-py/payment-ag/src/app/component/loginpage/loginpage.component.css
+++ b/payment-project-ang-py/payment-ag/src/app/component/loginpage/loginpage.component.css
@@ -8,6 +8,16 @@ body {
     align-items: center;
     height: 100vh;
 }
+.screen {
+    background-color: #f4f4f4;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 
 .container {
     background: #fff;
